--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "client": "npm run start --prefix client",
     "server": "nodemon server.js",
-    "dev": "concurrently npm run server && npm run client"
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
@@ -24,6 +24,7 @@
     "mongoose": "^5.2.12",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "socket.io": "^2.1.1",
     "validator": "^10.7.1"
   }
 }
