--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemon": "^1.18.4"
   },
   "dependencies": {
+    "avatar-me": "^0.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
